--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ nav li a:hover {
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Home.html"> <img src="file:///home/chronos/u-12bbb3481402acaf54cd671cf8b52be47907c408/MyFiles/Downloads/Logo.png" width="70px" height="70px"></a>
+            <a class="nav-link active" aria-current="page" href="Home.html"> <img src="file:///home/chronos/u-12bbb3481402acaf54cd671cf8b52be47907c408/MyFiles/Downloads/Screenshot%202024-05-06%201.10.40%20PM.png" width="70px" height="70px"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Home.html">Home</a>
