--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ nav li a:hover {
   </section>
   </main>
   <div class="image-container">
- <img src="file:///media/fuse/crostini_12bbb3481402acaf54cd671cf8b52be47907c408_termina_penguin/New/image.jpeg" alt="image">
+ <img src="bbs1.png" alt="image">
  <strong>
 <div class="overlay-text">Find your son/daughters new favourite babysitters at Lalibela Little Ones!</div>
 </strong>
