--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ nav li a:hover {
   </section>
   </main>
   <div class="image-container">
- <img src="babsitting.png" alt="image">
+ <img src="babysitting.png" alt="image">
  <strong>
 <div class="overlay-text">Find your son/daughters new favourite babysitters at Lalibela Little Ones!</div>
 </strong>
