--- a/index.html
+++ b/index.html
@@ -123,5 +123,6 @@ nav li a:hover {
 <img src="file:///home/chronos/u-12bbb3481402acaf54cd671cf8b52be47907c408/MyFiles/Downloads/Screenshot%202024-05-02%206.33.20%20PM.png">
 
 </strong>
+  <img src="2.png"
 </body>
 </html>
