--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ nav li a:hover {
 </b>
 <strong>
   <h4 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">Go to the Call us page,which is on the  5th button on the navbar</h4>
-<img src="file:///home/chronos/u-12bbb3481402acaf54cd671cf8b52be47907c408/MyFiles/Downloads/Screenshot%202024-05-02%206.33.20%20PM.png">
+<img src="top.png">
 
 </strong>
   <img src="2.png"
