--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ nav li a:hover {
 <h1 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">Thank you for choosing Lalibela Little Ones!</h1>
 <h2 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">Here is how to set your first babysitting apointment with us</h2>
 <br>
-<img src="file:///home/chronos/u-12bbb3481402acaf54cd671cf8b52be47907c408/MyFiles/Downloads/Screenshot%202024-05-02%205.53.47%20PM.png">
+<img src="1.png">
 <b>
 <h3 style="font-family: Arial, Helvetica, sans-serif; text-align: center; margin-top: -67px;">Step #1</h3>
 </b>
