--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@ nav li a:hover {
 <strong>
   <h4 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">Go to the Call us page,which is on the  5th button on the navbar</h4>
 <img src="top.png">
-
 </strong>
-  <img src="2.png"
+  <br>
+  <img src="2.png">
+<h2 style="text-align:center; margin-top:-60px;">Step #2</h2>
 </body>
 </html>
