--- a/Call.html
+++ b/Call.html
@@ -113,7 +113,7 @@ nav li a:hover {
     </div>
   </div>
 </div>
-<div class="card" style="width: 25rem; height: 25rem; align-items: center; border-width: 10px;border-color: black;background-color: rgb(248, 154, 120); margin-left: 970px; margin-top: -20px; ">
+<div class="card" style="width: 25rem; height: 25rem; align-items: center; border-width: 10px;border-color: black;background-color: rgb(248, 154, 120); margin-left: 970px; ">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
