--- a/Call.html
+++ b/Call.html
@@ -72,7 +72,7 @@ nav li a:hover {
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Home.html"> <img src="Logo .png" width="70px" height="70px"></a>
+            <a class="nav-link active" aria-current="page" href="index.html"> <img src="logo .png" width="70px" height="70px"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Home.html">Home</a>
