--- a/email.html
+++ b/email.html
@@ -100,7 +100,7 @@ nav li a:hover {
   <h2 style="font-family: Arial, Helvetica, sans-serif;">Email us</h2>
   <h3 style="font-family: Arial, Helvetica, sans-serif;">Don't have the time to call? You can get an appointment hear on our website!</h3>
   <p>although you will have to eventually call to confirm</p>
-  <form action="https://formsubmit.co/kokait2012@gmail.com" method="POST">
+  <form action="https://formsubmit.co/hiriant1@learn.cssd.ab.ca" method="POST">
     <h5 style="font-family: Arial, Helvetica, sans-serif;">Your kids' and Your name</h5>
     <input type="text" name="name" required placeholder="Name"><br><br><br><br>
     <h5 style="font-family: Arial, Helvetica, sans-serif;">Your Email</h5>
