--- a/email.html
+++ b/email.html
@@ -100,7 +100,7 @@ nav li a:hover {
   <h2 style="font-family: Arial, Helvetica, sans-serif;">Email us</h2>
   <h3 style="font-family: Arial, Helvetica, sans-serif;">Don't have the time to call? You can get an appointment hear on our website!</h3>
   <p>although you will have to eventually call to confirm</p>
-  <form action="https://formsubmit.co/hiriant1@learn.cssd.ab.ca" method="POST">
+  <form action="https://formsubmit.co/kokait2012@gmail.com" method="POST">
     <h5 style="font-family: Arial, Helvetica, sans-serif;">Your kids' and Your name</h5>
     <input type="text" name="name" required placeholder="Name"><br><br><br><br>
     <h5 style="font-family: Arial, Helvetica, sans-serif;">Your Email</h5>
@@ -113,11 +113,11 @@ nav li a:hover {
         <h5 style="font-family: Arial, Helvetica, sans-serif;">What day will this appointment be on?(Please check the calendar to make sure we are free at that date and time)</h5>
         <input type="date" name="date" required placeholder="Date of the appointment">
         <br><br><br>
-        <h5 style="font-family: Arial, Helvetica, sans-serif;">What time will this appointment be?(ending by 8:30 at the latest)</h5>
+        <h5 style="font-family: Arial, Helvetica, sans-serif;">What time will this appointment start?</h5>
         <p>Please make sure we are not busy at that time.</p>
         <h6>starts</h6>
         <input type="time" name="time" placeholder="Time appointment starts"><br>
-        <h6>ends</h6>
+        <h5>What time will it end?</h5>
         <input type="time" name="time" placeholder="Time appointment ends">
         <br><br><br>
     <button type="submit">Submit</button>
